# MinesWeeper

./: CMakeLists.txt
include/: board.h  logger.h  minesweeper.h
src/: board.cpp  logger.cpp  main.cpp  minesweeper.cpp
